# dimhouse

./: .gitignore  CLAUDE.md  README.md  apply-dimhouse-patch.sh  dimhouse-build.sh  example-xatu-config.yaml  kurtosis-config.yaml  save-patch.sh
.github/workflows/: add-patch.yml  check-patches.yml  docker.yml  list-patches.yml  validate-patches.yml
ci/: Dockerfile.ethpandaops  disable-upstream-workflows.sh
crates/xatu/: Cargo.toml  build.rs
crates/xatu/src/: chain.rs  config.rs  ffi.rs  init.rs  lib.rs  libxatu.h  observer_ffi.rs  shim.rs
diffs/sigp/lighthouse/: unstable.diff
overlay/xatu/: build.rs
overlay/xatu/src/: config.rs  ffi.rs  init.rs  metrics.rs  observer_trait.rs
patches/sigp/lighthouse/: fusaka-devnet-3.patch  unstable-01-optimistic.patch  unstable.patch
scripts/: apply-dimhouse-patch.sh  dimhouse-build.sh  save-patch.sh  update-deps.sh
